--- a/src/main/resources/templates/IngresarPeritaje.html
+++ b/src/main/resources/templates/IngresarPeritaje.html
@@ -26,17 +26,22 @@
     <div class="container">
         <h1 th:text="${titulo}"></h1>
         <div>
-            <form action="@{/ingresarPeritaje}" th:object="${desaPeri}" method="POST">
+            <form action="@{/validarPeritaje}" th:object="${desaPeri}" >
                 <label for="id_peritaje">Identficador del registro: </label>
                 <input type="text" id="id_peritaje" th:field="*{peritaje.id_peritaje}">
+                <div th:if="${#fields.hasErrors('peritaje.id_peritaje')}" th:errors="*{sexo}"></div>
                 <br>
 
                 <label for="identificado">Persona identificada: </label>
                 <input type="checkbox" id="identificado" th:field="*{peritaje.identificado}">
-
                 <br>
 
                 <th:block th:replace="components/form-registros :: registros" />
+
+                <label for="edad_estimada">Edad estimada: </label>
+                <input type="number" id="edad_estimada" th:field="*{peritaje.edad_estimada}">
+                <div th:if="${#fields.hasErrors('peritaje.edad_estimada')}" th:errors="*{peritaje.edad_estimada}"></div>
+                <br>
 
                 <label class="col-form-label">Departamento:</label>
                 <select class="form-control" id="deptoSelect">
