--- a/src/main/resources/templates/IngresarPeritaje.html
+++ b/src/main/resources/templates/IngresarPeritaje.html
@@ -26,21 +26,22 @@
     <div class="container">
         <h1 th:text="${titulo}"></h1>
         <div>
-            <form th:action="@{/validarPeritaje}" th:object="${desaPeri}" method="POST">
+            <form th:action="@{/validarPeritaje}" th:object="${peritaje}" method="POST">
+
                 <label for="id_peritaje">Identficador del registro: </label>
-                <input type="text" id="id_peritaje" th:field="*{peritaje.id_peritaje}">
-                <div th:if="${#fields.hasErrors('peritaje.id_peritaje')}" th:errors="*{peritaje.id_peritaje}" class="alert alert-danger" role="alert"></div>
+                <input type="text" id="id_peritaje" th:field="*{id_peritaje}">
+                <div th:if="${#fields.hasErrors('id_peritaje')}" th:errors="*{id_peritaje}" class="alert alert-danger"
+                    role="alert"></div>
                 <br>
 
                 <label for="identificado">Persona identificada: </label>
-                <input type="checkbox" id="identificado" th:field="*{peritaje.identificado}">
+                <input type="checkbox" id="identificado" th:field="*{identificado}">
                 <br>
 
-                <th:block th:replace="components/form-registros :: registros" />
-
                 <label for="edad_estimada">Edad estimada: </label>
-                <input type="number" id="edad_estimada" th:field="*{peritaje.edad_estimada}">
-                <div th:if="${#fields.hasErrors('peritaje.edad_estimada')}" th:errors="*{peritaje.edad_estimada}" class="alert alert-danger" role="alert"></div>
+                <input type="number" id="edad_estimada" th:field="*{edad_estimada}">
+                <div th:if="${#fields.hasErrors('edad_estimada')}" th:errors="*{edad_estimada}"
+                    class="alert alert-danger" role="alert"></div>
                 <br>
 
                 <label class="col-form-label">Departamento:</label>
@@ -62,14 +63,16 @@
                 <br>
 
                 <label class="col-form-label">Division pol&iacute;tica:</label>
-                <select class="form-control" id="divisionSelect" th:field="*{peritaje.id_division}">
+                <select class="form-control" id="divisionSelect" th:field="*{division.id_division}">
                     <option value="col2">Selecciona una opci&oacute;n</option>
                     <option th:each="division : ${divisiones}"
                         th:id="${division.municipio.departamento.id_departamento}" th:value="${division.id_division}"
                         th:text="${division.division}"></option>
                 </select>
 
-                <input type="submit" value="Ingresar Peritaje" class="btn btn-primary">
+                <div>
+                    <input type="submit" value="Ingresar Peritaje" class="btn btn-primary">
+                </div>
 
             </form>
         </div>
