--- a/src/main/resources/templates/components/form-registros.html
+++ b/src/main/resources/templates/components/form-registros.html
@@ -1,7 +1,13 @@
 <section th:fragment="registros">
+    <label for="direccion">Direcci&oacute;n: </label>
+    <div>
+        <textarea type="text" rows="5" cols="50" id="direccion" th:field="*{direccion}"></textarea>
+    </div>
+    <br>
     <label for="tipo_de_caso">Tipo de caso: </label>
     <input type="text" id="tipo_de_caso" th:field="*{tipo_de_caso}">
-    <div th:if="${#fields.hasErrors('tipo_de_caso')}" th:errors="*{tipo_de_caso}" class="alert alert-danger" role="alert"></div>
+    <div th:if="${#fields.hasErrors('tipo_de_caso')}" th:errors="*{tipo_de_caso}" class="alert alert-danger"
+        role="alert"></div>
     <br>
     <label for="nombre">Nombre: </label>
     <input type="text" id="nombre" th:field="*{nombre}">
@@ -16,24 +22,24 @@
         <input type="radio" th:field="*{sexo}" th:value="${sexo}">
         <label th:for="${#ids.prev('sexo')}" th:text="${sexo}"></label>
     </div>
-    <div th:if="${#fields.hasErrors('sexo')}" th:errors="*{sexo}" class="alert alert-danger" role="alert"></div>
+    <div th:if="${#fields.hasErrors('sexo')}" th:errors="*{sexo}" class="alert alert-danger" role="alert">
+    </div>
     <br>
     <label for="informacion_adicional">Informaci&oacute;n adicional: </label>
     <div>
         <textarea type="text" rows="10" cols="50" id="informacion_adicional"
             th:field="*{informacion_adicional}"></textarea>
     </div>
-    <div th:if="${#fields.hasErrors('informacion_adicional')}" th:errors="*{informacion_adicional}" class="alert alert-danger" role="alert"></div>
+    <div th:if="${#fields.hasErrors('informacion_adicional')}" th:errors="*{informacion_adicional}"
+        class="alert alert-danger" role="alert"></div>
     <br>
     <label for="DUI">DUI: </label>
     <input type="text" id="DUI" th:field="*{Dui}">
-    <div th:if="${#fields.hasErrors('Dui')}" th:errors="*{Dui}" class="alert alert-danger" role="alert"></div>
-    <br>
-    <label for="direccion">Direcci&oacute;n: </label>
-    <div>
-        <textarea type="text" rows="5" cols="50" id="direccion" th:field="*{direccion}"></textarea>
+    <div th:if="${#fields.hasErrors('Dui')}" th:errors="*{Dui}" class="alert alert-danger" role="alert">
     </div>
-    <div th:if="${#fields.hasErrors('direccion')}" th:errors="*{direccion}" class="alert alert-danger" role="alert"></div>
+    <br>
+    <div th:if="${#fields.hasErrors('direccion')}" th:errors="*{direccion}" class="alert alert-danger" role="alert">
+    </div>
     <br>
 
 </section>
