Registro de peritajes finalizado

--- a/src/main/resources/templates/components/form-registros.html
+++ b/src/main/resources/templates/components/form-registros.html
@@ -41,5 +41,6 @@
     <div th:if="${#fields.hasErrors('direccion')}" th:errors="*{direccion}" class="alert alert-danger" role="alert">
     </div>
     <br>
+    <input type="text" th:field="*{fecha_registro}">
 
 </section>
