--- a/src/main/resources/templates/IngresarDesaparecido.html
+++ b/src/main/resources/templates/IngresarDesaparecido.html
@@ -17,6 +17,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker.min.css" />
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.min.js"></script>
 
     <title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
@@ -26,25 +30,86 @@
     <div class="container">
         <h1 th:text="${titulo}"></h1>
         <div>
-            <form th:action="@{/validarDesaparecido}" th:object="${familiar}" method="GET">
+            <form th:action="@{/validarDesaparecido}" th:object="${desaparecido}" method="GET">
 
-                <label for="nombre">Nombre: </label>
-                <input type="text" id="nombre" th:field="*{nombre}">
-                <div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="alert alert-danger"
-                    role="alert"></div>
+
+                <label for="id_desaparecido">Identficador del registro: </label>
+                <input type="text" id="id_desaparecido" th:field="*{id_desaparecido}">
+                <div th:if="${#fields.hasErrors('id_desaparecido')}" th:errors="*{id_desaparecido}"
+                    class="alert alert-danger" role="alert"></div>
                 <br>
 
-                <label for="contacto">Contacto: </label>
-                <input type="text" id="contacto" th:field="*{contacto}">
-                <div th:if="${#fields.hasErrors('contacto')}" th:errors="*{contacto}" class="alert alert-danger"
-                    role="alert"></div>
+                <label for="nombre_familiar">Nombre de familiar: </label>
+                <input type="text" id="nombre_familiar" th:field="*{nombre_familiar}">
+                <div th:if="${#fields.hasErrors('nombre_familiar')}" th:errors="*{nombre_familiar}"
+                    class="alert alert-danger" role="alert"></div>
                 <br>
+
+                <label for="contacto_familiar">Contacto de familiar: </label>
+                <input type="text" id="contacto_familiar" th:field="*{contacto_familiar}">
+                <div th:if="${#fields.hasErrors('contacto_familiar')}" th:errors="*{contacto_familiar}"
+                    class="alert alert-danger" role="alert"></div>
+                <br>
+                <label for="fecha_nacimiento">Fecha de nacimiento: </label>
+                <input type="text" id="datepicker" th:field="*{fecha_nacimiento}">
+                <div th:if="${#fields.hasErrors('fecha_nacimiento')}" th:errors="*{fecha_nacimiento}"
+                    class="alert alert-danger" role="alert"></div>
+                <br>
+                <label class="col-form-label">Departamento:</label>
+                <select class="form-control" id="deptoSelect">
+                    <option value="col">Selecciona una opci&oacute;n</option>
+                    <option th:each="departamento : ${departamentos}" th:value="${departamento.id_departamento}"
+                        th:id="${departamento.id_departamento}" th:text="${departamento.departamento}">
+                    </option>
+                </select>
+
+                <br>
+
+                <label class="col-form-label">Municipio:</label>
+                <select class="form-control" id="municipioSelect">
+                    <option value="col1">Selecciona una opci&oacute;n</option>
+                    <option th:each="municipio : ${municipios}" th:id="${municipio.departamento.id_departamento}"
+                        th:value="${municipio.id_municipio}" th:text="${municipio.municipio}"></option>
+                </select>
+                <br>
+
+                <label class="col-form-label">Division pol&iacute;tica:</label>
+                <select class="form-control" id="divisionSelect" th:field="*{division.id_division}">
+                    <option value="col2">Selecciona una opci&oacute;n</option>
+                    <option th:each="division : ${divisiones}"
+                        th:id="${division.municipio.departamento.id_departamento}" th:value="${division.id_division}"
+                        th:text="${division.division}"></option>
+                </select>
 
                 <input type="submit" value="Siguiente" class="btn btn-primary">
 
             </form>
         </div>
     </div>
+
+    <script>
+        $(document).ready(function () {
+            $("#municipioSelect").children('option:gt(0)').hide();
+            $("#deptoSelect").change(function () {
+                $("#municipioSelect").children('option').hide();
+                $("#municipioSelect").children("option[id=" + $("#deptoSelect").val() + "]").show()
+            })
+        });
+
+        $(document).ready(function () {
+            $("#divisionSelect").children('option:gt(0)').hide();
+            $("#municipioSelect").change(function () {
+                $("#divisionSelect").children('option').hide();
+                $("#divisionSelect").children("option[id=" + $("#municipioSelect").val() + "]").show()
+            })
+        });
+
+        $(function () {
+            $('#datepicker').datepicker({
+                format: 'dd/mm/yyyy'
+            });
+        });
+    </script>
 
 
 </body>
