--- a/src/main/resources/templates/IngresarDesaparecido2.html
+++ b/src/main/resources/templates/IngresarDesaparecido2.html
@@ -26,72 +26,15 @@
     <div class="container">
         <h1 th:text="${titulo}"></h1>
         <div>
-            <form th:action="@{/validarDesaparecidos2}" th:object="${desaparecido}" method="GET">
+            <form th:action="@{/validarDesaparecido2}" th:object="${desaPeri}" method="POST">
+                <th:block th:replace="components/form-registros :: registros"></th:block>
+                <input type="text" th:field="${desaparecido.id_desaparecido}" th:value="id_desaparecido">
 
-				<input type="text" th:field="*{familiar.id_familiar}" th:value="${fam}">
-				
-                <label for="id_desaparecido">Identficador del registro: </label>
-                <input type="text" id="id_desaparecido" th:field="*{id_desaparecido}">
-                <div th:if="${#fields.hasErrors('id_desaparecido')}" th:errors="*{id_desaparecido}" class="alert alert-danger"
-                    role="alert"></div>
-                <br>
-                
-                <label for="fecha_nacimiento">Fecha de nacimiento: </label>
-                <input type="date" id="id_desaparecido" th:field="*{fecha_nacimiento}">
-                <div th:if="${#fields.hasErrors('fecha_nacimiento')}" th:errors="*{fecha_nacimiento}" class="alert alert-danger"
-                    role="alert"></div>
-                <br>
-
-                <label class="col-form-label">Departamento:</label>
-                <select class="form-control" id="deptoSelect">
-                    <option value="col">Selecciona una opci&oacute;n</option>
-                    <option th:each="departamento : ${departamentos}" th:value="${departamento.id_departamento}"
-                        th:id="${departamento.id_departamento}" th:text="${departamento.departamento}">
-                    </option>
-                </select>
-
-                <br>
-
-                <label class="col-form-label">Municipio:</label>
-                <select class="form-control" id="municipioSelect">
-                    <option value="col1">Selecciona una opci&oacute;n</option>
-                    <option th:each="municipio : ${municipios}" th:id="${municipio.departamento.id_departamento}"
-                        th:value="${municipio.id_municipio}" th:text="${municipio.municipio}"></option>
-                </select>
-                <br>
-
-                <label class="col-form-label">Division pol&iacute;tica:</label>
-                <select class="form-control" id="divisionSelect" th:field="*{division.id_division}">
-                    <option value="col2">Selecciona una opci&oacute;n</option>
-                    <option th:each="division : ${divisiones}"
-                        th:id="${division.municipio.departamento.id_departamento}" th:value="${division.id_division}"
-                        th:text="${division.division}"></option>
-                </select>
-
-                <input type="submit" value="Siguiente" class="btn btn-primary">
+                <input type="submit" value="Ingresar Desaparecido" class="btn btn-primary">
 
             </form>
         </div>
     </div>
-
-    <script>
-        $(document).ready(function () {
-            $("#municipioSelect").children('option:gt(0)').hide();
-            $("#deptoSelect").change(function () {
-                $("#municipioSelect").children('option').hide();
-                $("#municipioSelect").children("option[id=" + $("#deptoSelect").val() + "]").show()
-            })
-        });
-
-        $(document).ready(function () {
-            $("#divisionSelect").children('option:gt(0)').hide();
-            $("#municipioSelect").change(function () {
-                $("#divisionSelect").children('option').hide();
-                $("#divisionSelect").children("option[id=" + $("#municipioSelect").val() + "]").show()
-            })
-        });
-    </script>
-
 
 </body>
 
