--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,6 +24,7 @@
 <body>
 
     <div class="container">
+        <h3><span th:text="${idDesaPeri}"></span></h3>
         <h3><span th:text="${mensaje}"></span></h3>
     </div>
 
