--- a/src/main/resources/templates/verPeritajeInd.html
+++ b/src/main/resources/templates/verPeritajeInd.html
@@ -24,7 +24,7 @@
 <body>
 
     <div class="container">
-        <h3><span th:text="${mensaje}"></span></h3>
+        <h5 class="alert alert-success" th:text="${mensaje}"></h5>
 
         <div class="card">
             <div class="card-body">
