--- a/src/main/resources/templates/verPeritaje.html
+++ b/src/main/resources/templates/verPeritaje.html
@@ -34,7 +34,7 @@
                 </div>
                 <div>
                     <b class="d-inline">Persona identificada: </b>
-                    <p class="d-inline" th:text="${desaPeri.peritaje.identificado}"></p>
+                    <p class="d-inline" th:text="${desaPeri.peritaje.getEstadoDelegate}"></p>
                 </div>
                 <div>
                     <b class="d-inline">Edad estimada: </b>
