Modificacion a selecion de casos de peritajes

--- a/src/main/resources/templates/IngresarDesaparecido2.html
+++ b/src/main/resources/templates/IngresarDesaparecido2.html
@@ -27,8 +27,10 @@
         <h1 th:text="${titulo}"></h1>
         <div>
             <form th:action="@{/validarDesaparecido2}" th:object="${desaPeri}" method="POST">
+                <input type="hidden" th:field="*{tipo_de_caso}">
+                <br>
                 <th:block th:replace="components/form-registros :: registros"></th:block>
-                <input type="text" th:field="${desaparecido.id_desaparecido}" th:value="id_desaparecido">
+                <input type="hidden" th:field="${desaparecido.id_desaparecido}" th:value="id_desaparecido">
 
                 <input type="submit" value="Ingresar Desaparecido" class="btn btn-primary">
 
