--- a/src/main/resources/templates/IngresarPeritaje2.html
+++ b/src/main/resources/templates/IngresarPeritaje2.html
@@ -27,8 +27,15 @@
         <h1 th:text="${titulo}"></h1>
         <div>
             <form th:action="@{/validarPeritaje2}" th:object="${desaPeri}" method="POST">
+                <label for="tipo_de_caso">Tipo de caso: </label>
+                <select class="form-control" id="casoSelect" th:field="*{tipo_de_caso}">
+                    <option value="col2">Selecciona una opci&oacute;n</option>
+                    <option th:each="caso : ${listaCasos}" th:id="${tipo_de_caso}" th:value="${caso}" th:text="${caso}">
+                    </option>
+                </select>
+
                 <th:block th:replace="components/form-registros :: registros"></th:block>
-                <input type="text" th:field="${peritaje.id_peritaje}" th:value="id_peritaje">
+                <input type="hidden" th:field="${peritaje.id_peritaje}" th:value="id_peritaje">
 
                 <input type="submit" value="Ingresar Peritaje" class="btn btn-primary">
 
