Implementacion de DTO para mostrar lista de desaparecidos y peritajes con identfiicador correspondiente

--- a/src/main/resources/templates/listaDesaparecidos.html
+++ b/src/main/resources/templates/listaDesaparecidos.html
@@ -38,7 +38,7 @@
             </thead>
             <tbody>
                 <tr th:each=" desaPeri: ${desaPeriL}">
-                    <th scope="row" th:text="${desaPeri.id_desaperi}"></th>
+                    <th scope="row" th:text="${desaPeri.id_desaparecido}"></th>
                     <td th:text="${desaPeri.tipo_de_caso}"></td>
                     <td th:text="${desaPeri.nombre}"></td>
                     <td th:text="${desaPeri.apellido}"></td>
