--- a/src/main/resources/templates/listaPeritajes.html
+++ b/src/main/resources/templates/listaPeritajes.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
-
+	<script src="https://kit.fontawesome.com/99b5aa301b.js" crossorigin="anonymous"></script>
     <title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
@@ -34,6 +34,7 @@
                     <th scope="col">Nombre</th>
                     <th scope="col">Apellido</th>
                     <th scope="col">Fecha Registro</th>
+                    <th scope="col">Acción</th>
                 </tr>
             </thead>
             <tbody>
@@ -43,6 +44,16 @@
                     <td th:text="${desaPeri.nombre}"></td>
                     <td th:text="${desaPeri.apellido}"></td>
                     <td th:text="${desaPeri.fecha_registro}"></td>
+                    <td>
+                        <div class="d-flex">
+                            <form class="p-1" action="" method="post">
+                                <button type="button" class="btn btn-success">Editar</button>
+                            </form>
+                            <form class="p-1" action="" method="post">
+                                <button type="button" class="btn btn-danger">Eliminar</button>
+                            </form>
+                        </div>
+                    </td>
                 </tr>
             </tbody>
         </table>
