--- a/src/main/resources/templates/listaRegistros.html
+++ b/src/main/resources/templates/listaRegistros.html
@@ -46,10 +46,10 @@
                     <td th:text="${desaPeri.fecha_registro}"></td>
                     <td>
                         <div class="d-flex">
-                            <form class="p-1" action="" method="post">
+                            <form class="p-1" action="" method="GET">
                                 <button type="button" class="btn btn-success">Editar</button>
                             </form>
-                            <form class="p-1" action="" method="post">
+                            <form class="p-1" action="" method="GET">
                                 <button type="button" class="btn btn-danger">Eliminar</button>
                             </form>
                         </div>
