--- a/src/main/resources/templates/listaPeritajes.html
+++ b/src/main/resources/templates/listaPeritajes.html
@@ -17,15 +17,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
-	<script src="https://kit.fontawesome.com/99b5aa301b.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/99b5aa301b.js" crossorigin="anonymous"></script>
     <title th:text="'Ausys - '+ ${titulo}"></title>
 </head>
 
 <body>
 
     <div class="container">
-    	<h1 th:text="${titulo}"></h1>
-    	<br>
+        <h1 th:text="${titulo}"></h1>
+        <br>
         <table class="table">
             <thead class="thead-dark">
                 <tr>
@@ -46,10 +46,14 @@
                     <td th:text="${desaPeri.fecha_registro}"></td>
                     <td>
                         <div class="d-flex">
-                            <form class="p-1" action="" method="post">
+                            <form class="p-1" action="" method="GET">
+                                <input type="text" th:value=${desaPeri.id_peritaje}>
+                                <input type="text" th:value=${desaPeri.id_desaperi}>
                                 <button type="button" class="btn btn-success">Editar</button>
                             </form>
-                            <form class="p-1" action="" method="post">
+                            <form class="p-1" action="" method="GET">
+                                <input type="text" th:value=${desaPeri.id_peritaje}>
+                                <input type="text" th:value=${desaPeri.id_desaperi}>
                                 <button type="button" class="btn btn-danger">Eliminar</button>
                             </form>
                         </div>
