--- a/src/main/resources/templates/verDesaparecido.html
+++ b/src/main/resources/templates/verDesaparecido.html
@@ -34,18 +34,19 @@
                 </div>
                 <div>
                     <b class="d-inline">Fecha de nacimiento: </b>
-                    <p class="d-inline" th:text="${desaparecido.fecha_nacimiento}"></p>
+                    <p class="d-inline" th:text="${desaPeri.desaparecido.fecha_nacimiento}"></p>
                 </div>
                 <div>
                     <b class="d-inline">Nombre de familiar: </b>
-                    <p class="d-inline" th:text="${desaparecido.nombre_familiar}"></p>
+                    <p class="d-inline" th:text="${desaPeri.desaparecido.nombre_familiar}"></p>
                 </div>
                 <div>
                     <b class="d-inline">Contacto familiar: </b>
-                    <p class="d-inline" th:text="${desaparecido.contacto_familiar}"></p>
+                    <p class="d-inline" th:text="${desaPeri.desaparecido.contacto_familiar}"></p>
                 </div>
                 <div>
                     <b class="d-inline">Divici&oacute;n: </b>
+                    <p class="d-inline" th:text="${desaPeri.desaparecido.division.id_division}"></p>
                 </div>
                 <div>
                     <b class="d-inline">Direcci&oacute;n: </b>
