--- a/src/main/resources/templates/verDesaparecido.html
+++ b/src/main/resources/templates/verDesaparecido.html
@@ -45,7 +45,7 @@
                     <p class="d-inline" th:text="${desaPeri.desaparecido.contacto_familiar}"></p>
                 </div>
                 <div>
-                    <b class="d-inline">Divici&oacute;n: </b>
+                    <b class="d-inline">Divisi&oacute;n: </b>
                     <p class="d-inline" th:text="${desaPeri.desaparecido.division.id_division}"></p>
                 </div>
                 <div>
