--- a/src/main/resources/templates/verPeritaje.html
+++ b/src/main/resources/templates/verPeritaje.html
@@ -41,7 +41,7 @@
                     <p class="d-inline" th:text="${desaPeri.peritaje.edad_estimada}"></p>
                 </div>
                 <div>
-                    <b class="d-inline">Divici&oacute;n: </b>
+                    <b class="d-inline">Divisi&oacute;n: </b>
                     <p class="d-inline" th:text="${desaPeri.peritaje.division.id_division}"></p>
                 </div>
                 <div>
