--- a/src/main/resources/templates/editarDesaparecido.html
+++ b/src/main/resources/templates/editarDesaparecido.html
@@ -33,13 +33,10 @@
             <form th:action="@{/editar/desaparecido2/} + ${id_desaparecidoParam} + '/' + ${id_desaperiParam}"
                 th:object="${desaparecido}" method="GET">
 
-                <input th:name="id_desaperi" type="text" th:value=${id_desaperiParam}>
+                <input th:name="id_desaperi" type="hidden" th:value=${id_desaperiParam}>
 
-                <label for="id_desaparecido">Identficador del registro: </label>
-                <input type="text" id="id_desaparecido" th:name="id_desaparecido" th:field="*{id_desaparecido}">
-                <div th:if="${#fields.hasErrors('id_desaparecido')}" th:errors="*{id_desaparecido}"
-                    class="alert alert-danger" role="alert"></div>
-                <br>
+                <input type="hidden" id="id_desaparecido" th:name="id_desaparecido" th:field="*{id_desaparecido}">
+                
 
                 <label for="nombre_familiar">Nombre de familiar: </label>
                 <input type="text" id="nombre_familiar" th:field="*{nombre_familiar}">
@@ -57,29 +54,7 @@
                 <div th:if="${#fields.hasErrors('fecha_nacimiento')}" th:errors="*{fecha_nacimiento}"
                     class="alert alert-danger" role="alert"></div>
                 <br>
-                <input type="text" th:field="*{division.id_division}" >
-                <!-- <label class="col-form-label">Departamento:</label>
-                <select class="form-control" id="deptoSelect">
-                    <option value="col">Selecciona una opci&oacute;n</option>
-                    <option th:each="departamento : ${departamentos}" th:value="${departamento.id_departamento}"
-                        th:id="${departamento.id_departamento}" th:text="${departamento.departamento}">
-                    </option>
-                </select>
-                <br>
-                <label class="col-form-label">Municipio:</label>
-                <select class="form-control" id="municipioSelect">
-                    <option value="col1">Selecciona una opci&oacute;n</option>
-                    <option th:each="municipio : ${municipios}" th:id="${municipio.departamento.id_departamento}"
-                        th:value="${municipio.id_municipio}" th:text="${municipio.municipio}"></option>
-                </select>
-                <br>
-                <label class="col-form-label">Division pol&iacute;tica:</label>
-                <select class="form-control" id="divisionSelect" th:field="*{division.id_division}">
-                    <option value="col2">Selecciona una opci&oacute;n</option>
-                    <option th:each="division : ${divisiones}"
-                        th:id="${division.municipio.departamento.id_departamento}" th:value="${division.id_division}"
-                        th:text="${division.division}"></option>
-                </select> -->
+                <input type="hidden" th:field="*{division.id_division}" >
                 <br>
                 <input type="submit" value="Siguiente" class="btn btn-primary">
             </form>
@@ -87,21 +62,6 @@
     </div>
 
     <script>
-        // $(document).ready(function () {
-        //     $("#municipioSelect").children('option:gt(0)').hide();
-        //     $("#deptoSelect").change(function () {
-        //         $("#municipioSelect").children('option').hide();
-        //         $("#municipioSelect").children("option[id=" + $("#deptoSelect").val() + "]").show()
-        //     })
-        // });
-
-        // $(document).ready(function () {
-        //     $("#divisionSelect").children('option:gt(0)').hide();
-        //     $("#municipioSelect").change(function () {
-        //         $("#divisionSelect").children('option').hide();
-        //         $("#divisionSelect").children("option[id=" + $("#municipioSelect").val() + "]").show()
-        //     })
-        // });
 
         $(function () {
             $('#datepicker').datepicker({
