--- a/src/main/resources/templates/editarPeritaje2.html
+++ b/src/main/resources/templates/editarPeritaje2.html
@@ -26,18 +26,24 @@
     <div class="container">
         <h1 th:text="${titulo}"></h1>
         <div>
-            <form th:action="@{/validarEdicion/desaparecido2/} + ${id_desaparecidoParam} + '/' + ${id_desaperiParam}"
+            <form th:action="@{/validarEdicion/peritaje2/} + ${id_peritajeParam} + '/' + ${id_desaperiParam}"
                 th:object="${desaPeri}" method="POST">
 
                 <input th:name="id_desaperi" type="hidden" th:value=${id_desaperiParam}>
-                <input th:name="id_desaparecido" type="hidden" th:value=${id_desaparecidoParam}>
+                <input th:name="id_peritaje" type="hidden" th:value=${id_peritajeParam}>
 
-                <input type="hidden" th:field="*{tipo_de_caso}">
-                <br>
+
+                <label for="tipo_de_caso">Tipo de caso: </label>
+                <select class="form-control" id="casoSelect" th:field="*{tipo_de_caso}">
+                    <option value="col2">Selecciona una opci&oacute;n</option>
+                    <option th:each="caso : ${listaCasos}" th:id="${tipo_de_caso}" th:value="${caso}" th:text="${caso}">
+                    </option>
+                </select>
+
                 <th:block th:replace="components/form-registros :: registros"></th:block>
-                <input type="hidden" th:field="*{desaparecido.id_desaparecido}">
+                <input type="hidden" th:field="*{peritaje.id_peritaje}" th:value="id_peritaje">
 
-                <input type="submit" value="Terminar edición" class="btn btn-primary">
+                <input type="submit" value="Ingresar Peritaje" class="btn btn-primary">
 
             </form>
         </div>
