--- a/src/main/resources/templates/listaPeritajes.html
+++ b/src/main/resources/templates/listaPeritajes.html
@@ -46,14 +46,16 @@
                     <td th:text="${desaPeri.fecha_registro}"></td>
                     <td>
                         <div class="d-flex">
-                            <form class="p-1" action="" method="GET">
-                                <input type="text" th:value=${desaPeri.id_peritaje}>
-                                <input type="text" th:value=${desaPeri.id_desaperi}>
-                                <button type="button" class="btn btn-success">Editar</button>
+                            <form class="p-1"
+                                th:action="@{/editar/peritaje/} + ${desaPeri.id_peritaje} + '/' + ${desaPeri.id_desaperi}"
+                                method="GET">
+                                <input th:name="id_peritaje" type="hidden" th:value=${desaPeri.id_peritaje}>
+                                <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
+                                <input type="submit" class="btn btn-success" value="Editar">
                             </form>
                             <form class="p-1" action="" method="GET">
-                                <input type="text" th:value=${desaPeri.id_peritaje}>
-                                <input type="text" th:value=${desaPeri.id_desaperi}>
+                                <input th:name="id_peritaje" type="hidden" th:value=${desaPeri.id_peritaje}>
+                                <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
                                 <button type="button" class="btn btn-danger">Eliminar</button>
                             </form>
                         </div>
