--- a/src/main/resources/templates/listaDesaparecidos.html
+++ b/src/main/resources/templates/listaDesaparecidos.html
@@ -53,10 +53,11 @@
                                 <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
                                 <input type="submit" class="btn btn-success" value="Editar">
                             </form>
-                            <form class="p-1" action="" method="GET">
+                            <form class="p-1" th:action="@{/eliminar/desaparecido/} + ${desaPeri.id_desaparecido} + '/' + ${desaPeri.id_desaperi}" method="GET">
                                 <input th:name="id_desaparecido" type="hidden" th:value=${desaPeri.id_desaparecido}>
                                 <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
-                                <button type="button" class="btn btn-danger">Eliminar</button>
+                                <input type="submit" class="btn btn-danger" value="Eliminar"
+                                    onclick="return confirm('¿Estás seguro que deseas eliminar el resgitro del desaparecido?');">
                             </form>
                         </div>
                     </td>
