--- a/src/main/resources/templates/listaPeritajes.html
+++ b/src/main/resources/templates/listaPeritajes.html
@@ -53,10 +53,13 @@
                                 <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
                                 <input type="submit" class="btn btn-success" value="Editar">
                             </form>
-                            <form class="p-1" action="" method="GET">
+                            <form class="p-1"
+                                th:action="@{/eliminar/peritaje/} + ${desaPeri.id_peritaje} + '/' + ${desaPeri.id_desaperi}"
+                                method="GET">
                                 <input th:name="id_peritaje" type="hidden" th:value=${desaPeri.id_peritaje}>
                                 <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
-                                <button type="button" class="btn btn-danger">Eliminar</button>
+                                <input type="submit" class="btn btn-danger" value="Eliminar"
+                                    onclick="return confirm('¿Estás seguro que deseas eliminar el peritaje?');">
                             </form>
                         </div>
                     </td>
