--- a/src/main/resources/templates/verRegistro.html
+++ b/src/main/resources/templates/verRegistro.html
@@ -17,6 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/99b5aa301b.js" crossorigin="anonymous"></script>
 
     <title th:text="'Ausys'"></title>
 </head>
@@ -26,9 +27,9 @@
     <div class="container">
         <div class="card">
             <div th:each="registro: ${registro}" class="card-body">
-                
-                    <b class="d-inline">Identficador del registro: </b>
-                    <p class="d-inline" th:text="${registro.id_registro}"></p>
+
+                <b class="d-inline">Identficador del registro: </b>
+                <p class="d-inline" th:text="${registro.id}"></p>
                 <div>
                     <b class="d-inline">Persona identificada: </b>
                     <p class="d-inline" th:text="${registro.identificado}"></p>
@@ -73,9 +74,16 @@
                     <b class="d-inline">Fecha de registro:</b>
                     <p class="d-inline" th:text="${registro.fecha_registro}"></p>
                 </div>
+                <br>
+                <form class="p-1" th:action="@{/especial/} + ${registro.id} + '/' + ${registro.id_registro}"
+                    method="GET">
+                    <input th:name="id_peritaje" type="hidden" th:value=${registro.id}>
+                    <input th:name="id_desaperi" type="hidden" th:value=${registro.id_registro}>
+                    <button type="submit" class="btn btn-success">
+                        <i class="fas fa-plus"></i>  Agregar marca especial</button>
+                </form>
             </div>
         </div>
-
 
     </div>
 
