Funcionalidad ingresar carecteristica especial terminada

--- a/src/main/resources/templates/ingresarEspecial.html
+++ b/src/main/resources/templates/ingresarEspecial.html
@@ -26,7 +26,14 @@
     <div class="container">
         <h1 th:text="${titulo}"></h1>
         <div>
-            <form th:action="@{/validarEspecial/} + ${id}" th:object="${especial}" method="POST">
+        	<form th:if="${val} == 'Desaparecido'" th:action="@{/validarEspecialD/} + ${id}" th:object="${especial}" method="POST">
+
+                <th:block th:replace="components/form-especial :: especiales"></th:block>
+                <!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
+                <input type="submit" value="Siguiente" class="btn btn-primary">
+
+            </form>
+            <form th:if="${val} == 'Peritaje'" th:action="@{/validarEspecial/} + ${id}" th:object="${especial}" method="POST">
 
                 <th:block th:replace="components/form-especial :: especiales"></th:block>
                 <!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
