--- a/src/main/resources/templates/ingresarFoto.html
+++ b/src/main/resources/templates/ingresarFoto.html
@@ -31,6 +31,9 @@
                 
                 <th:block th:replace="components/form-foto :: foto"></th:block>
                 <!-- <input type="text" th:name="id" th:field="*{id_peritaje}"> -->
+                <div th:if="${alert}" th:text="${alert}"
+                    class="alert alert-danger" role="alert"></div>
+                <br>
                 <input type="submit" value="Siguiente" class="btn btn-primary">
 
             </form>
