--- a/src/main/resources/templates/listaRegistros.html
+++ b/src/main/resources/templates/listaRegistros.html
@@ -28,7 +28,7 @@
         <br>
         <div>
         <form th:action="@{/listaRegistros}" method="get">
-        	<label for="filtro">Filtro temporal: </label>
+        	<label for="filtro">Nombre o apellido: </label>
 	        <input type="text" id="filtro" name="keyword">
 	        <br>
 	        <label for="tipo_de_caso">Tipo de caso: </label>
