--- a/src/main/resources/templates/verDesaparecido.html
+++ b/src/main/resources/templates/verDesaparecido.html
@@ -30,7 +30,7 @@
             <div class="card-body">
                 <div>
                     <b class="d-inline">Identficador del registro: </b>
-                    <p class="d-inline" th:text="${desaPeri.id_desaperi}"></p>
+                    <p class="d-inline" th:text="${desaPeri.desaparecido.id_desaparecido}"></p>
                 </div>
                 <div>
                     <b class="d-inline">Fecha de nacimiento: </b>
