--- a/src/main/resources/templates/verPeritaje.html
+++ b/src/main/resources/templates/verPeritaje.html
@@ -30,7 +30,7 @@
             <div class="card-body">
                 <div>
                     <b class="d-inline">Identficador del registro: </b>
-                    <p class="d-inline" th:text="${desaPeri.id_desaperi}"></p>
+                    <p class="d-inline" th:text="${desaPeri.peritaje.id_peritaje}"></p>
                 </div>
                 <div>
                     <b class="d-inline">Persona identificada: </b>
