Funcionalidad generar reportes para filtros

--- a/src/main/resources/templates/listaRegistros.html
+++ b/src/main/resources/templates/listaRegistros.html
@@ -71,7 +71,7 @@
 			        <input type="radio" th:value="${sexo}" name="sexo" th:id="${sexo}">
 			        <label th:for="${sexo}" th:text="${sexo}"></label> 
 			    </div>
-		        <input type="submit" value="Buscar" class="btn btn-warning">
+		        <input type="submit" value="Generar" class="btn btn-warning">
 	        </form>
         
         </div>
